cmake_minimum_required(VERSION 3.19)
project(CurlDump)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED True)
add_definitions(-D_CRT_SECURE_NO_WARNINGS)
include_directories(src inc vendor/minhook vendor/minhook/include)
add_subdirectory(vendor/minhook)
set(SOURCE src/main.cpp src/scan.cpp)
add_library(CurlDump SHARED ${SOURCE})
target_link_libraries(CurlDump minhook)